# DW1ModelConverter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD-PARTY-NOTICE
.github/workflows/: build.yml
libs/tinyxml2/: CMakeLists.txt
src/: Animation.cpp  Animation.hpp  CLUTMap.cpp  CLUTMap.hpp  CMakeLists.txt  Collada.cpp  Collada.hpp  GLTF.cpp  GLTF.hpp  GameData.cpp  GameData.hpp  MAP.cpp  MAP.hpp  MMD Anim.txt  Model.cpp  Model.hpp  TIM.cpp  TIM.hpp  main.cpp
src/utils/: ReadBuffer.hpp
